feat: company configuration crud api
